code improvment and refactor
